Assignment 2 - AST Generation/Code/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{}'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'boolean'", "'do'", "'else'", "'false'", "'float'", 
                     "'for'", "'function'", "'if'", "'integer'", "'return'", 
                     "'string'", "'true'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'main'", 
                     "'readInteger'", "'printInteger'", "'readFloat'", "'writeFloat'", 
                     "'readBoolean'", "'printBoolean'", "'readString'", 
                     "'printString'", "'super'", "'preventDefault'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "'.'", 
                     "';'", "':'", "'='", "<INVALID>", "'\\'", "'\"'", "'''" ]

    symbolicNames = [ "<INVALID>", "EMPTY_BODY", "LINECMT", "MULTLINECMT", 
                      "INTLIT", "FLOATLIT", "BOOLLIT", "STRINGLIT", "AUTO", 
                      "BREAK", "BOOLEAN", "DO", "ELSE", "FALSE", "FLOAT", 
                      "FOR", "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", 
                      "TRUE", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ARRAY", "MAIN", "READINT", "PRINTINT", 
                      "READFLOAT", "WRITEFLOAT", "READBOOL", "PRINTBOOL", 
                      "READSTRING", "PRINTSTRING", "SUPER", "PREVENTDEFAULT", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", "AND", "OR", 
                      "EQ", "NOT_EQ", "LESS", "LESS_OR_EQ", "GREATER", "GREATER_OR_EQ", 
                      "STRING_CONCAT", "LP", "RP", "LS", "RS", "LC", "RC", 
                      "COMMA", "PERIOD", "SEMI", "COLON", "ASSIGN", "ID", 
                      "BACKSLASH", "DQUOTES", "SQUOTE", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_int_list = 1
    RULE_type_func = 2
    RULE_type_vardecl_no_expr = 3
    RULE_type_vardecl_with_expr = 4
    RULE_decls = 5
    RULE_idlist = 6
    RULE_array_expression_list1 = 7
    RULE_array_expression1 = 8
    RULE_array_expression_list2 = 9
    RULE_array_expression2 = 10
    RULE_arraydecl_with_expr = 11
    RULE_arraydecl_no_expr = 12
    RULE_vardecl_with_expr = 13
    RULE_vardecl_no_expr = 14
    RULE_vardecl = 15
    RULE_param_list = 16
    RULE_paramdecl = 17
    RULE_inherit = 18
    RULE_funcdecl = 19
    RULE_expression_list = 20
    RULE_expression = 21
    RULE_string = 22
    RULE_relational = 23
    RULE_logical1 = 24
    RULE_arithmetic1 = 25
    RULE_arithmetic2 = 26
    RULE_logical2 = 27
    RULE_sign = 28
    RULE_index = 29
    RULE_term = 30
    RULE_function = 31
    RULE_statements = 32
    RULE_statement = 33
    RULE_assign = 34
    RULE_if_ = 35
    RULE_for_ = 36
    RULE_while_ = 37
    RULE_do_while = 38
    RULE_break_ = 39
    RULE_continue_ = 40
    RULE_return_ = 41
    RULE_call = 42
    RULE_mixed = 43
    RULE_block_statement = 44
    RULE_special_function = 45
    RULE_read_int = 46
    RULE_print_int = 47
    RULE_read_float = 48
    RULE_write_float = 49
    RULE_read_bool = 50
    RULE_print_bool = 51
    RULE_read_string = 52
    RULE_print_string = 53
    RULE_super_ = 54
    RULE_prevent_default = 55

    ruleNames =  [ "program", "int_list", "type_func", "type_vardecl_no_expr", 
                   "type_vardecl_with_expr", "decls", "idlist", "array_expression_list1", 
                   "array_expression1", "array_expression_list2", "array_expression2", 
                   "arraydecl_with_expr", "arraydecl_no_expr", "vardecl_with_expr", 
                   "vardecl_no_expr", "vardecl", "param_list", "paramdecl", 
                   "inherit", "funcdecl", "expression_list", "expression", 
                   "string", "relational", "logical1", "arithmetic1", "arithmetic2", 
                   "logical2", "sign", "index", "term", "function", "statements", 
                   "statement", "assign", "if_", "for_", "while_", "do_while", 
                   "break_", "continue_", "return_", "call", "mixed", "block_statement", 
                   "special_function", "read_int", "print_int", "read_float", 
                   "write_float", "read_bool", "print_bool", "read_string", 
                   "print_string", "super_", "prevent_default" ]

    EOF = Token.EOF
    EMPTY_BODY=1
    LINECMT=2
    MULTLINECMT=3
    INTLIT=4
    FLOATLIT=5
    BOOLLIT=6
    STRINGLIT=7
    AUTO=8
    BREAK=9
    BOOLEAN=10
    DO=11
    ELSE=12
    FALSE=13
    FLOAT=14
    FOR=15
    FUNCTION=16
    IF=17
    INTEGER=18
    RETURN=19
    STRING=20
    TRUE=21
    WHILE=22
    VOID=23
    OUT=24
    CONTINUE=25
    OF=26
    INHERIT=27
    ARRAY=28
    MAIN=29
    READINT=30
    PRINTINT=31
    READFLOAT=32
    WRITEFLOAT=33
    READBOOL=34
    PRINTBOOL=35
    READSTRING=36
    PRINTSTRING=37
    SUPER=38
    PREVENTDEFAULT=39
    ADD=40
    SUB=41
    MUL=42
    DIV=43
    MOD=44
    NOT=45
    AND=46
    OR=47
    EQ=48
    NOT_EQ=49
    LESS=50
    LESS_OR_EQ=51
    GREATER=52
    GREATER_OR_EQ=53
    STRING_CONCAT=54
    LP=55
    RP=56
    LS=57
    RS=58
    LC=59
    RC=60
    COMMA=61
    PERIOD=62
    SEMI=63
    COLON=64
    ASSIGN=65
    ID=66
    BACKSLASH=67
    DQUOTES=68
    SQUOTE=69
    WS=70
    UNCLOSE_STRING=71
    ILLEGAL_ESCAPE=72
    ERROR_CHAR=73

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.MAIN, MT22Parser.ID]:
                self.state = 112
                self.decls()
                pass
            elif token in [MT22Parser.EOF]:
                pass
            else:
                raise NoViableAltException(self)

            self.state = 116
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Int_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def int_list(self):
            return self.getTypedRuleContext(MT22Parser.Int_listContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_int_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt_list" ):
                return visitor.visitInt_list(self)
            else:
                return visitor.visitChildren(self)




    def int_list(self):

        localctx = MT22Parser.Int_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_int_list)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(MT22Parser.INTLIT)
                self.state = 119
                self.match(MT22Parser.COMMA)
                self.state = 120
                self.int_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_type_func

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_func" ):
                return visitor.visitType_func(self)
            else:
                return visitor.visitChildren(self)




    def type_func(self):

        localctx = MT22Parser.Type_funcContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_type_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING) | (1 << MT22Parser.VOID))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_vardecl_no_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LS(self):
            return self.getToken(MT22Parser.LS, 0)

        def int_list(self):
            return self.getTypedRuleContext(MT22Parser.Int_listContext,0)


        def RS(self):
            return self.getToken(MT22Parser.RS, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_type_vardecl_no_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_vardecl_no_expr" ):
                return visitor.visitType_vardecl_no_expr(self)
            else:
                return visitor.visitChildren(self)




    def type_vardecl_no_expr(self):

        localctx = MT22Parser.Type_vardecl_no_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type_vardecl_no_expr)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.BOOLEAN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(MT22Parser.BOOLEAN)
                pass
            elif token in [MT22Parser.INTEGER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.match(MT22Parser.INTEGER)
                pass
            elif token in [MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.match(MT22Parser.FLOAT)
                pass
            elif token in [MT22Parser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.match(MT22Parser.STRING)
                pass
            elif token in [MT22Parser.ARRAY]:
                self.enterOuterAlt(localctx, 5)
                self.state = 130
                self.match(MT22Parser.ARRAY)
                self.state = 131
                self.match(MT22Parser.LS)
                self.state = 132
                self.int_list()
                self.state = 133
                self.match(MT22Parser.RS)
                self.state = 134
                self.match(MT22Parser.OF)
                self.state = 135
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 6)
                self.state = 137
                self.match(MT22Parser.AUTO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_vardecl_with_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_type_vardecl_with_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_vardecl_with_expr" ):
                return visitor.visitType_vardecl_with_expr(self)
            else:
                return visitor.visitChildren(self)




    def type_vardecl_with_expr(self):

        localctx = MT22Parser.Type_vardecl_with_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_vardecl_with_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.AUTO) | (1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MT22Parser.VardeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(MT22Parser.DeclsContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = MT22Parser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_decls)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.vardecl()
                self.state = 143
                self.decls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.funcdecl()
                self.state = 146
                self.decls()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.vardecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idlist(self):
            return self.getTypedRuleContext(MT22Parser.IdlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = MT22Parser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_idlist)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(MT22Parser.ID)
                self.state = 153
                self.match(MT22Parser.COMMA)
                self.state = 154
                self.idlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_expression_list1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LC(self):
            return self.getToken(MT22Parser.LC, 0)

        def array_expression1(self):
            return self.getTypedRuleContext(MT22Parser.Array_expression1Context,0)


        def RC(self):
            return self.getToken(MT22Parser.RC, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def array_expression_list1(self):
            return self.getTypedRuleContext(MT22Parser.Array_expression_list1Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_array_expression_list1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_expression_list1" ):
                return visitor.visitArray_expression_list1(self)
            else:
                return visitor.visitChildren(self)




    def array_expression_list1(self):

        localctx = MT22Parser.Array_expression_list1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_expression_list1)
        try:
            self.state = 168
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 158
                self.match(MT22Parser.LC)
                self.state = 159
                self.array_expression1(0)
                self.state = 160
                self.match(MT22Parser.RC)
                self.state = 161
                self.match(MT22Parser.COMMA)
                self.state = 162
                self.array_expression_list1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(MT22Parser.LC)
                self.state = 165
                self.array_expression1(0)
                self.state = 166
                self.match(MT22Parser.RC)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_expression1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LC(self):
            return self.getToken(MT22Parser.LC, 0)

        def array_expression1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.Array_expression1Context)
            else:
                return self.getTypedRuleContext(MT22Parser.Array_expression1Context,i)


        def RC(self):
            return self.getToken(MT22Parser.RC, 0)

        def expression_list(self):
            return self.getTypedRuleContext(MT22Parser.Expression_listContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_array_expression1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_expression1" ):
                return visitor.visitArray_expression1(self)
            else:
                return visitor.visitChildren(self)



    def array_expression1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MT22Parser.Array_expression1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_array_expression1, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.LC]:
                self.state = 171
                self.match(MT22Parser.LC)
                self.state = 172
                self.array_expression1(0)
                self.state = 173
                self.match(MT22Parser.RC)
                pass
            elif token in [MT22Parser.INTLIT, MT22Parser.FLOATLIT, MT22Parser.BOOLLIT, MT22Parser.STRINGLIT, MT22Parser.READINT, MT22Parser.PRINTINT, MT22Parser.READFLOAT, MT22Parser.WRITEFLOAT, MT22Parser.READBOOL, MT22Parser.PRINTBOOL, MT22Parser.READSTRING, MT22Parser.PRINTSTRING, MT22Parser.SUPER, MT22Parser.PREVENTDEFAULT, MT22Parser.SUB, MT22Parser.NOT, MT22Parser.LP, MT22Parser.ID]:
                self.state = 175
                self.expression_list()
                pass
            else:
                raise NoViableAltException(self)
